# serializer version: 1
# name: test_sensors[sensor.erics273_follower-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_follower',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Follower',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWER: 'follower'>,
    'unique_id': '2533274913657542_follower',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.erics273_follower-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Follower',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_follower',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18',
  })
# ---
# name: test_sensors[sensor.erics273_following-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_following',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Following',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWING: 'following'>,
    'unique_id': '2533274913657542_following',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.erics273_following-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Following',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_following',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_sensors[sensor.erics273_friends-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_friends',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Friends',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FRIENDS: 'friends'>,
    'unique_id': '2533274913657542_friends',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.erics273_friends-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Friends',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_friends',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_sensors[sensor.erics273_gamerscore-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_gamerscore',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerscore',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.GAMER_SCORE: 'gamer_score'>,
    'unique_id': '2533274913657542_gamer_score',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensors[sensor.erics273_gamerscore-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Gamerscore',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_gamerscore',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3802',
  })
# ---
# name: test_sensors[sensor.erics273_in_party-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_in_party',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In party',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.IN_PARTY: 'in_party'>,
    'unique_id': '2533274913657542_in_party',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.erics273_in_party-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 In party',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_in_party',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.erics273_last_online-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_last_online',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last online',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.LAST_ONLINE: 'last_online'>,
    'unique_id': '2533274913657542_last_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.erics273_last_online-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'erics273 Last online',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_last_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2020-10-08T04:19:58+00:00',
  })
# ---
# name: test_sensors[sensor.erics273_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.NOW_PLAYING: 'now_playing'>,
    'unique_id': '2533274913657542_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.erics273_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'achievements': None,
      'developer': None,
      'friendly_name': 'erics273 Now playing',
      'gamerscore': None,
      'genres': None,
      'min_age': None,
      'progress': None,
      'publisher': None,
      'release_date': None,
      'short_description': None,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.erics273_party_join_restrictions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_party_join_restrictions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Party join restrictions',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.JOIN_RESTRICTIONS: 'join_restrictions'>,
    'unique_id': '2533274913657542_join_restrictions',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.erics273_party_join_restrictions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'erics273 Party join restrictions',
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_party_join_restrictions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.erics273_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.erics273_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.STATUS: 'status'>,
    'unique_id': '2533274913657542_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.erics273_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.erics273_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Last seen 17h ago: Home',
  })
# ---
# name: test_sensors[sensor.gsr_ae_follower-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_follower',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Follower',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWER: 'follower'>,
    'unique_id': '271958441785640_follower',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.gsr_ae_follower-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Follower',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_follower',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '105',
  })
# ---
# name: test_sensors[sensor.gsr_ae_following-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_following',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Following',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWING: 'following'>,
    'unique_id': '271958441785640_following',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.gsr_ae_following-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Following',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_following',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '121',
  })
# ---
# name: test_sensors[sensor.gsr_ae_friends-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_friends',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Friends',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FRIENDS: 'friends'>,
    'unique_id': '271958441785640_friends',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.gsr_ae_friends-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Friends',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_friends',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_sensors[sensor.gsr_ae_gamerscore-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_gamerscore',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerscore',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.GAMER_SCORE: 'gamer_score'>,
    'unique_id': '271958441785640_gamer_score',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensors[sensor.gsr_ae_gamerscore-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Gamerscore',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_gamerscore',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '27750',
  })
# ---
# name: test_sensors[sensor.gsr_ae_in_party-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_in_party',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In party',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.IN_PARTY: 'in_party'>,
    'unique_id': '271958441785640_in_party',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.gsr_ae_in_party-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae In party',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_in_party',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor.gsr_ae_last_online-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_last_online',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last online',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.LAST_ONLINE: 'last_online'>,
    'unique_id': '271958441785640_last_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.gsr_ae_last_online-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'GSR Ae Last online',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_last_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2020-10-09T00:12:27+00:00',
  })
# ---
# name: test_sensors[sensor.gsr_ae_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.NOW_PLAYING: 'now_playing'>,
    'unique_id': '271958441785640_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.gsr_ae_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'achievements': '2 / 43',
      'developer': 'Mistwalker / Artoon',
      'entity_picture': 'https://store-images.s-microsoft.com/image/apps.35072.13670972585585116.70570f0d-17aa-4f97-b692-5412fa183673.25a97451-9369-4f6b-b66b-3427913235eb',
      'friendly_name': 'GSR Ae Now playing',
      'gamerscore': '10 / 1000',
      'genres': 'Role Playing',
      'min_age': 13,
      'progress': '1 %',
      'publisher': 'Microsoft',
      'release_date': datetime.date(2016, 12, 14),
      'short_description': 'Hironobu Sakaguchi, the Father of the Final Fantasy series, and Artoon present the world of Blue Dragon on Xbox 360. Featuring the character design of Akira Toriyama, the Father of "Dragon Ball Z", and music by Nobuo Uematsu, the composer for Final Fantasy, Blue Dragon is an epic role-playing game (RPG) centered on five youngsters who possess miraculous strength and magical power to control shadow creatures that mirror the actions of their masters.',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Blue Dragon',
  })
# ---
# name: test_sensors[sensor.gsr_ae_party_join_restrictions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_party_join_restrictions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Party join restrictions',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.JOIN_RESTRICTIONS: 'join_restrictions'>,
    'unique_id': '271958441785640_join_restrictions',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.gsr_ae_party_join_restrictions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'GSR Ae Party join restrictions',
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_party_join_restrictions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'joinable',
  })
# ---
# name: test_sensors[sensor.gsr_ae_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.gsr_ae_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.STATUS: 'status'>,
    'unique_id': '271958441785640_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.gsr_ae_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gsr_ae_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Last seen 49m ago: Xbox App',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_follower-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_follower',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Follower',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWER: 'follower'>,
    'unique_id': '2533274838782903_follower',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_follower-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Follower',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_follower',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '81',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_following-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_following',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Following',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FOLLOWING: 'following'>,
    'unique_id': '2533274838782903_following',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_following-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Following',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_following',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '73',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_friends-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_friends',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Friends',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FRIENDS: 'friends'>,
    'unique_id': '2533274838782903_friends',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_friends-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Friends',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_friends',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_gamerscore-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_gamerscore',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerscore',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.GAMER_SCORE: 'gamer_score'>,
    'unique_id': '2533274838782903_gamer_score',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_gamerscore-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Gamerscore',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_gamerscore',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '27210',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_in_party-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_in_party',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In party',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.IN_PARTY: 'in_party'>,
    'unique_id': '2533274838782903_in_party',
    'unit_of_measurement': 'people',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_in_party-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu In party',
      'unit_of_measurement': 'people',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_in_party',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_last_online-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_last_online',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last online',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.LAST_ONLINE: 'last_online'>,
    'unique_id': '2533274838782903_last_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_last_online-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Ikken Hissatsuu Last online',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_last_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.NOW_PLAYING: 'now_playing'>,
    'unique_id': '2533274838782903_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'achievements': None,
      'developer': None,
      'friendly_name': 'Ikken Hissatsuu Now playing',
      'gamerscore': None,
      'genres': None,
      'min_age': None,
      'progress': None,
      'publisher': None,
      'release_date': None,
      'short_description': None,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_party_join_restrictions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_party_join_restrictions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Party join restrictions',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.JOIN_RESTRICTIONS: 'join_restrictions'>,
    'unique_id': '2533274838782903_join_restrictions',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_party_join_restrictions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Ikken Hissatsuu Party join restrictions',
      'options': list([
        'invite_only',
        'joinable',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_party_join_restrictions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'joinable',
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ikken_hissatsuu_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.STATUS: 'status'>,
    'unique_id': '2533274838782903_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.ikken_hissatsuu_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ikken_hissatsuu_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Offline',
  })
# ---
# name: test_sensors[sensor.xone_free_space_external-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xone_free_space_external',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space - External',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FREE_STORAGE: 'free_storage'>,
    'unique_id': 'HIJKLMN_3_free_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xone_free_space_external-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONE Free space - External',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xone_free_space_external',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2980.89726638794',
  })
# ---
# name: test_sensors[sensor.xone_free_space_internal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xone_free_space_internal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space - Internal',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FREE_STORAGE: 'free_storage'>,
    'unique_id': 'HIJKLMN_2_free_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xone_free_space_internal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONE Free space - Internal',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xone_free_space_internal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '137.056728363037',
  })
# ---
# name: test_sensors[sensor.xone_total_space_external-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xone_total_space_external',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total space - External',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.TOTAL_STORAGE: 'total_storage'>,
    'unique_id': 'HIJKLMN_3_total_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xone_total_space_external-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONE Total space - External',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xone_total_space_external',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3726.02327680588',
  })
# ---
# name: test_sensors[sensor.xone_total_space_internal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xone_total_space_internal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total space - Internal',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.TOTAL_STORAGE: 'total_storage'>,
    'unique_id': 'HIJKLMN_2_total_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xone_total_space_internal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONE Total space - Internal',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xone_total_space_internal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '364.999996185303',
  })
# ---
# name: test_sensors[sensor.xonex_free_space_internal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xonex_free_space_internal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space - Internal',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.FREE_STORAGE: 'free_storage'>,
    'unique_id': 'ABCDEFG_1_free_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xonex_free_space_internal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONEX Free space - Internal',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xonex_free_space_internal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '220.041568756104',
  })
# ---
# name: test_sensors[sensor.xonex_total_space_internal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.xonex_total_space_internal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total space - Internal',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxSensor.TOTAL_STORAGE: 'total_storage'>,
    'unique_id': 'ABCDEFG_1_total_storage',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensors[sensor.xonex_total_space_internal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'XONEX Total space - Internal',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.xonex_total_space_internal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '780.999996185303',
  })
# ---
